@@ -1,3 +1,8 @@
+2005-10-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gunicollate.c (g_utf8_collate_key_for_filename): Handle
+	all-zero sequences correctly.  (#317930, Sebastien Bacher)
+
 2005-10-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/gmarkup.c (g_markup_escape_text): Doc addition
